[project]
name = "meck-property-search"
version = "0.1.0"
description = "Mecklenburg County, NC property record aggregator"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "rich>=13.0",
    "flask>=2.3",
]

[project.scripts]
meck-search = "meck_property_search.cli:main"
meck-web = "meck_property_search.web:main"
